--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <section class="full-body">
   <div class="col-sm-12">
-    <div class="header">
+    <div class="header text-white">
       <img
         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJAppmGh87qQmWRfMPuieELLHz_2WdTbq7CQ&usqp=CAU"
-        class="img-thumbnail" height="75px" width="75px" alt="logo">
+        class="img-thumbnail" height="50px" width="50px" alt="logo">
       <h3 class="schoolname">School Name</h3>
     </div>
 
